added button to zoom map to random location - issue #11

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
         <div id="header" class="collapse navbar-collapse">
             <button type="button" id="button-prg-dl" class="btn btn-light p-1 m-1">Pobierz adresy dla JOSM (do 50k obiektów)</button>
             <button type="button" id="button-buildings-dl" class="btn btn-light p-1 m-1">Pobierz budynki dla JOSM (do 50k obiektów)</button>
+            <button type="button" id="button-random-location" class="btn btn-light p-1 m-1">Losuj lokalizację</button>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a id="buildings-info" class="nav-link" data-toggle="modal" data-target="#modalBudynki">Klauzula informacyjna o budynkach</a>
