changed link title for modal

--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
             <button type="button" id="button-random-location" class="btn btn-light p-1 m-1">Losuj lokalizację</button>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a id="buildings-info" class="nav-link" data-toggle="modal" data-target="#modalBudynki" onclick="processesInfo()">Klauzula informacyjna o budynkach</a>
+                    <a id="buildings-info" class="nav-link" data-toggle="modal" data-target="#modalBudynki" onclick="processesInfo()">Klauzula informacyjna</a>
                 </li>
                 <li class="nav-item">
                     <a id="faq" class="nav-link" href="/help.html" target="_blank">FAQ/Pomoc</a>
