added subpage with links and descriptions of files that can be downloaded

--- a/web/index.html
+++ b/web/index.html
@@ -54,6 +54,9 @@
                 <li class="nav-item">
                     <a id="faq" class="nav-link" href="/help.html" target="_blank">FAQ/Pomoc</a>
                 </li>
+                <li class="nav-item">
+                    <a id="data-info" class="nav-link" href="/opis_danych.html" target="_blank">Dane GIS</a>
+                </li>
             </ul>
         </div>
     </nav>
