added homepage link

--- a/web/help.html
+++ b/web/help.html
@@ -14,11 +14,16 @@
     <meta charset="UTF-8">
     <title>FAQ/Pomoc</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <script src="https://kit.fontawesome.com/c495f0c7c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 </head>
 <body>
 <div class="container bg-light">
+
+    <p><a href="/"><i class="fas fa-home"></i> Wróć na stronę główną</a></p>
+
     <h1 class="my-4">FAQ</h1>
     <h2>Co ta strona robi?</h2>
     <p class="lead">Na tej stronie można zobaczyć gdzie w OpenStreetMap brakuje danych (adresy, budynki) według rejestrów państwowych oraz pobrać te dane w formacie, który łatwo można zaimportować do OSM za pomocą programu JOSM.</p>
