--- a/web/opis_danych.html
+++ b/web/opis_danych.html
@@ -14,12 +14,16 @@
     <meta charset="UTF-8">
     <title>Opis danych</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <script src="https://kit.fontawesome.com/c495f0c7c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
     <link rel="stylesheet" href="./extras.css">
 </head>
 <body>
 <div class="container bg-light">
+
+    <p><a href="/"><i class="fas fa-home"></i> Wróć na stronę główną</a></p>
 
     <h1 class="my-4">Opis danych dostępnych do pobrania</h1>
     <p>Wszystkie dane znajdują się pod linkiem: <a href="https://budynki.openstreetmap.org.pl/dane/">https://budynki.openstreetmap.org.pl/dane/</a> , a poniżej opis zawartości.</p>
