#22 - added ortophotomap to layer list

--- a/web/index.html
+++ b/web/index.html
@@ -216,6 +216,12 @@
                         <span class="slider round"></span>
                     </label>
                     <label for="buildingsLayerToggle">Budynki</label>
+                    <br>
+                    <label class="switch">
+                        <input id="ortoLayerToggle" type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label for="ortoLayerToggle">Ortofotomapa (zdj. lotnicze)</label>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Zamknij</button>
