--- a/web/opis_danych.html
+++ b/web/opis_danych.html
@@ -29,6 +29,49 @@
     <p>Wszystkie dane znajdują się pod linkiem: <a href="https://budynki.openstreetmap.org.pl/dane/">https://budynki.openstreetmap.org.pl/dane/</a> , a poniżej opis zawartości.</p>
     <p>W przypadku problemów technicznych najlepiej utworzyć zgłoszenie <a href="https://github.com/openstreetmap-polska/gugik2osm/issues">na GitHub.</a></p>
 
+    <h2>BDOT10k - obrysy budynków (BUBD)</h2>
+    <p>Zbiór zawiera obrysy budynków. Dane pochodzą ze zbioru BDOT10k z warstwy BUBD, która zawiera większość budynków (część obiektów sportowych jest w niej chyba nieujęta).</p>
+    <p>Format danych to spakowany plik Geopackage (gpkg) zawierający geometrie poligonowe. Warstwa zawiera także atrybuty charakteryzujące budynek.</p>
+    <p>Dane dostępne do pobrania zarówno dla całej Polski jak i dla poszczególnych województw.</p>
+    <img src="/screenshots/bdot10k_bubd.jpg" class="img-fluid mb-4" alt="Zrzut ekranu pokazujący obrysy budynków na tle ortofotomapy."/>
+    <p>Linki:</p>
+    <dl>
+        <dt>Polska:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a.zip</a></dd>
+        <dt>Dolnośląskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_dolnoslaskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_dolnoslaskie.zip</a></dd>
+        <dt>Kujawsko-Pomorskie</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_kujawsko_pomorskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_kujawsko_pomorskie.zip</a></dd>
+        <dt>Łódzkie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lodzkie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lodzkie.zip</a></dd>
+        <dt>Lubelskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubelskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubelskie.zip</a></dd>
+        <dt>Lubuskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip</a></dd>
+        <dt>Małopolskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip</a></dd>
+        <dt>Mazowieckie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_mazowieckie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_mazowieckie.zip</a></dd>
+        <dt>Opolskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_opolskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_opolskie.zip</a></dd>
+        <dt>Podkarpackie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podkarpackie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podkarpackie.zip</a></dd>
+        <dt>Podlaskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podlaskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podlaskie.zip</a></dd>
+        <dt>Pomorskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_pomorskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_pomorskie.zip</a></dd>
+        <dt>Śląskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_slaskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_slaskie.zip</a></dd>
+        <dt>Świętokrzyskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_swietokrzyskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_swietokrzyskie.zip</a></dd>
+        <dt>Warmińsko-Mazurskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_warminsko_mazurskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_warminsko_mazurskie.zip</a></dd>
+        <dt>Wielkopolskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_wielkopolskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_wielkopolskie.zip</a></dd>
+        <dt>Zachodniopomorskie:</dt>
+        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_zachodniopomorskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_zachodniopomorskie.zip</a></dd>
+    </dl>
+
     <h2>LOD1 - obrysy budynków</h2>
     <p>Zbiór do pobrania zawiera obrysy budynków. Dane pochodzą z przetworzenia modeli budynków 3D udostępnianych przez Główny Urząd Geodezji i Kartografii w geoportalu krajowym.</p>
     <p>Format danych to spakowany plik Geopackage (gpkg) zawierający geometrie poligonowe.</p>
