--- a/web/index.html
+++ b/web/index.html
@@ -131,6 +131,9 @@
                         <dd><a href="https://integracja.gugik.gov.pl/Budynki3D/GUGiK_Licencja_na_Budynki3D.pdf" target="_blank">https://integracja.gugik.gov.pl/Budynki3D/GUGiK_Licencja_na_Budynki3D.pdf</a></dd>
                     </dl>
                     <a id="buildings-info-json" href="/lod1/not_in/osm/info.json" target="_blank">JSON</a>
+                    <br>
+                    <p><b>Informacja o wykorzystanym zbiorze PRG</b></p>
+                    <p>Dane PRG są elementem państwowego zasobu geodezyjnego i kartograficznego (art. 4 ust. 1a pkt 4 ustawy z dnia 17 maja 1989 r. Prawo geodezyjne i kartograficzne (Dz. U. z 2020 r. poz. 276 z późn. zm.). Zgodnie natomiast z art. 40a ust. 2 pkt 1 lit. a oraz 40c ust. 5 wymienionej ustawy nie pobiera się za te dane opłat i nie wydaje licencji. Tym samym dane PRG mogą być wykorzystywane do dowolnego celu bez ograniczeń.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Zamknij</button>
