changed how reports of invalid addresses/buildings are handled, instead of trying to remove them right away they are placed into a queue and deleted from the database during partial_update process, this will make reporting much more responsive to the user

--- a/web/index.html
+++ b/web/index.html
@@ -152,7 +152,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Dziękujemy za zgłoszenie! Po odświeżeniu strony obiekt już nie powinien się pojawiać.
+                    Dziękujemy za zgłoszenie! Podczas kolejnej aktualizacji cominutowej obiekt powinien zostać usunięty.
+                    <br>
+                    Informacje o aktualizacjach są w zakładce "Status".
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Zamknij</button>
@@ -171,7 +173,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Coś poszło nie tak podczas zgłaszania. Czy na pewno uzupełniłeś/aś captcha?. Spróbuj jeszcze raz.
+                    Coś poszło nie tak podczas zgłaszania. Czy na pewno uzupełniłeś/aś captcha? Spróbuj jeszcze raz.
+                    <br>
+                    Jeżeli problem będzie się powtarzać zgłoś go <a href="https://github.com/openstreetmap-polska/gugik2osm/issues" target="_blank">na GitHubie</a>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Zamknij</button>
