changed osm addresses exports to include osm_id

--- a/web/opis_danych.html
+++ b/web/opis_danych.html
@@ -114,12 +114,12 @@ c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęb
     <p>Format danych to spakowany plik CSV rozdzielany przecinkiem kodowanie UTF-8.</p>
     <p>Link: <a href="https://budynki.openstreetmap.org.pl/dane/osm_addresses.zip">https://budynki.openstreetmap.org.pl/dane/osm_addresses.zip</a></p>
     <p>Przykład:</p>
-    <pre class="pre-x-scrollable">miejscowosc,czesc_miejscowosci,ulica,nr,pna,kod_ulic,kod_miejscowosci,x_4326,y_4326
-Poznań,,Ostatnia,14,,,,16.8733883064414,52.3706387086838
-Warszawa,,Górnośląska,31,00-432,05976,0918123,21.033970837956,52.2245169905113
-Warszawa,,Jazdów,2,00-467,,,21.0307457847444,52.2195121275527
-Warszawa,,Nowy Świat,6/12,00-497,14535,0918123,21.0223631203198,52.2310387072317
-Warszawa,,Myśliwiecka,6,00-459,13562,0918123,21.0344455719963,52.2228133201634
+    <pre class="pre-x-scrollable">osm_id,miejscowosc,czesc_miejscowosci,ulica,nr,pna,kod_ulic,kod_miejscowosci,x_4326,y_4326
+1,Poznań,,Ostatnia,14,,,,16.8733883064414,52.3706387086838
+2,Warszawa,,Górnośląska,31,00-432,05976,0918123,21.033970837956,52.2245169905113
+3,Warszawa,,Jazdów,2,00-467,,,21.0307457847444,52.2195121275527
+4,Warszawa,,Nowy Świat,6/12,00-497,14535,0918123,21.0223631203198,52.2310387072317
+5,Warszawa,,Myśliwiecka,6,00-459,13562,0918123,21.0344455719963,52.2228133201634
     </pre>
 
     <h2>OSM - obrysy budynków</h2>
