#44 - changed opacity of updates layer and added toggle button to layers pane

--- a/web/index.html
+++ b/web/index.html
@@ -228,6 +228,12 @@
                         <span class="slider round"></span>
                     </label>
                     <label for="ortoLayerToggle">Ortofotomapa (zdj. lotnicze)</label>
+                    <br>
+                    <label class="switch">
+                        <input id="updatesLayerToggle" type="checkbox" checked>
+                        <span class="slider round"></span>
+                    </label>
+                    <label for="updatesLayerToggle">Aktualizacje OSM i eksporty danych</label>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Zamknij</button>
