changed buildings data source from LOD1 3D models to BDOT

--- a/web/index.html
+++ b/web/index.html
@@ -113,24 +113,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p><b>Informacja o wykorzystanym zbiorze budynków 3D</b></p>
-                    <dl id="lodinfo">
-                        <dt>Zbiór</dt>
-                        <dd>Modele 3D Budynków</dd>
-                        <dt>Źródło</dt>
-                        <dd>www.geoportal.gov.pl</dd>
-                        <dt>Dysponent</dt>
-                        <dd>Główny Geodeta Kraju</dd>
-                        <dt>Data pobrania zbioru</dt>
-                        <dd>2019-11-10</dd>
-                        <dt>Zakres przetworzenia</dt>
-                        <dd>Geometria budynków została spłaszczona do 2D oraz wyekstrahowana została część poligonowa wykorzystana dalej jako obrys budynku.</dd>
-                        <dt>Informacja</dt>
-                        <dd>Modele 3D budynków nie stanowią rejestru publicznego ani elementu treści takiego rejestru. W konsekwencji czego mają wartość jedynie poglądową. Niezgodność Modeli 3D budynków ze stanem faktycznym lub prawnym, tak w postaci nieprzetworzonej jak i po ich ewentualnym przetworzeniu w procesie ponownego wykorzystania, nie może stanowić podstawy odpowiedzialności Głównego Geodety Kraju z jakiegokolwiek tytułu wobec jakiegokolwiek podmiotu.</dd>
-                        <dt>Licencja</dt>
-                        <dd><a href="https://integracja.gugik.gov.pl/Budynki3D/GUGiK_Licencja_na_Budynki3D.pdf" target="_blank">https://integracja.gugik.gov.pl/Budynki3D/GUGiK_Licencja_na_Budynki3D.pdf</a></dd>
-                    </dl>
-                    <a id="buildings-info-json" href="/lod1/not_in/osm/info.json" target="_blank">JSON</a>
+                    <!-- todo: dodać info o licencji BDOT (analogicznie jak PRG) -->
                     <br>
                     <p><b>Informacja o wykorzystanym zbiorze PRG</b></p>
                     <p>Dane PRG są elementem państwowego zasobu geodezyjnego i kartograficznego (art. 4 ust. 1a pkt 4 ustawy z dnia 17 maja 1989 r. Prawo geodezyjne i kartograficzne (Dz. U. z 2020 r. poz. 276 z późn. zm.). Zgodnie natomiast z art. 40a ust. 2 pkt 1 lit. a oraz 40c ust. 5 wymienionej ustawy nie pobiera się za te dane opłat i nie wydaje licencji. Tym samym dane PRG mogą być wykorzystywane do dowolnego celu bez ograniczeń.</p>
