added icons for discord and wikipedia and changed title for github icon to keep it consistent with new icons

--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,19 @@
                     <a id="data-info" class="nav-link" href="/opis_danych.html" target="_blank"><i class="fas fa-download"></i> Dane GIS</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a id="gh-link" class="nav-link" href="https://github.com/openstreetmap-polska/gugik2osm"><i class="fab fa-github fa-lg" title="Icon linking to GitHub"></i></a>
+                    <a id="gh-link" class="nav-link" href="https://github.com/openstreetmap-polska/gugik2osm" target="_blank">
+                        <i class="fab fa-github fa-lg" title="Link do GitHub"></i>
+                    </a>
+                </li>
+                <li class="nav-item px-2">
+                    <a id="discord-link" class="nav-link" href="https://discord.gg/HvQWsMeQzT" target="_blank">
+                        <i class="fab fa-discord fa-lg" title="Link do kanału na czacie Discord"></i>
+                    </a>
+                </li>
+                <li class="nav-item px-2">
+                    <a id="wiki-link" class="nav-link" href="https://wiki.openstreetmap.org/wiki/Pl:Importowanie_adres%C3%B3w" target="_blank">
+                        <i class="fab fa-wikipedia-w fa-lg" title="Link do Wikipedii OpenStreetMap"></i>
+                    </a>
                 </li>
             </ul>
         </div>
