added information about license for BDOT10k dataset (buildings)

--- a/web/index.html
+++ b/web/index.html
@@ -125,7 +125,8 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <!-- todo: dodać info o licencji BDOT (analogicznie jak PRG) -->
+                    <p><b>Informacja o wykorzystanym zbiorze BDOT10k</b></p>
+                    <p>Dane BDOT10k są elementem państwowego zasobu geodezyjnego i kartograficznego (art. 4 ust. 1a pkt 8 ustawy z dnia 17 maja 1989 r. Prawo geodezyjne i kartograficzne (Dz. U. z 2020 r. poz. 276 z późn. zm.). Zgodnie natomiast z art. 40a ust. 2 pkt 1 lit. h, j oraz 40c ust. 5 wymienionej ustawy nie pobiera się za te dane opłat i nie wydaje licencji. Tym samym dane BDOT10k mogą być wykorzystywane do dowolnego celu bez ograniczeń.</p>
                     <br>
                     <p><b>Informacja o wykorzystanym zbiorze PRG</b></p>
                     <p>Dane PRG są elementem państwowego zasobu geodezyjnego i kartograficznego (art. 4 ust. 1a pkt 4 ustawy z dnia 17 maja 1989 r. Prawo geodezyjne i kartograficzne (Dz. U. z 2020 r. poz. 276 z późn. zm.). Zgodnie natomiast z art. 40a ust. 2 pkt 1 lit. a oraz 40c ust. 5 wymienionej ustawy nie pobiera się za te dane opłat i nie wydaje licencji. Tym samym dane PRG mogą być wykorzystywane do dowolnego celu bez ograniczeń.</p>
